package game;

public class Gun extends Item {

    public Gun(String name) {
        super(name, 5);
    }
}
