package game;

public class Zombie extends NPC {

	public Zombie(String name, int Bullets) {
		super(name, 1);
	}
}
